--- a/module-3/two_sample_t_test/difference_of_means_from_two_populations.ipynb
+++ b/module-3/two_sample_t_test/difference_of_means_from_two_populations.ipynb
@@ -57,12 +57,14 @@
     "\n",
     "|  your work is here -  take $\\alpha = 0.05$\n",
     "\n",
-    "|"
+    "|$H_0$: There is no difference between population means\\\n",
+    "$\\mu_1$ = $\\mu_2$  i.e. $\\mu_1$ - $\\mu_2$ = 0\\\n",
+    "$H_a$: $\\mu_1$ > $\\mu_2$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,12 +126,15 @@
    "source": [
     "Note that instead of an estimation interval we could also find a z-statistic. Recall that the z-score is given by:\n",
     "\n",
-    "$$  z = \\frac{(\\bar{x}_{1} - \\bar{x}_{2}) - D_{0}}{\\sqrt{\\frac{\\sigma_{1}^{2}}{n_{1}} + \\frac{\\sigma_{2}^{2}}{n_{2}}}} $$"
+    "$$  z = \\frac{(\\bar{x}_{1} - \\bar{x}_{2}) - D_{0}}{\\sqrt{\\frac{\\sigma_{1}^{2}}{n_{1}} + \\frac{\\sigma_{2}^{2}}{n_{2}}}} $$\n",
+    "\\\n",
+    "In this Example:\\\n",
+    "$$  z = \\frac{(\\bar{x}_{1} - \\bar{x}_{2}) - 0}{\\sqrt{\\frac{\\sigma_{1}^{2}}{n_{1}} + \\frac{\\sigma_{2}^{2}}{n_{2}}}} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +142,7 @@
      "output_type": "stream",
      "text": [
       "z-statistics is 2.25047364585234\n",
-      "corresponding probability density is 0.9962018418731031\n",
+      "corresponding probability density is 0.968294158750959\n",
       "Probability of getting z smaller than 2.25047364585234 is 0.9877905526911385\n",
       "Probability of getting such z-value or higher by just chance is 0.012209447308861532\n"
      ]
@@ -150,7 +155,7 @@
     "\n",
     "print('z-statistics is {}'.format(z))\n",
     "\n",
-    "z_pdf = 1 - stats.norm.pdf(3.051)\n",
+    "z_pdf = 1 - stats.norm.pdf(z)\n",
     "\n",
     "print('corresponding probability density is {}'.format(z_pdf))\n",
     "\n",
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +241,7 @@
        "Ttest_indResult(statistic=2.3941130363637915, pvalue=0.028601412116788048)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +283,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
