post coach lab 11-14

--- a/module-6/day-4/re_coach_lab/Regex_V2.ipynb
+++ b/module-6/day-4/re_coach_lab/Regex_V2.ipynb
@@ -75,8 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T14:41:04.991393Z",
+     "start_time": "2019-11-14T14:41:04.984518Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import re"
@@ -91,11 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T14:47:32.746163Z",
+     "start_time": "2019-11-14T14:47:32.739590Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "string_1 = ''"
+    "string_1 = 'a Max is wearing blue today'"
    ]
   },
   {
@@ -109,11 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T14:47:32.758301Z",
+     "start_time": "2019-11-14T14:47:32.751444Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "pattern = r\"()\""
+    "pattern = r\"a\""
    ]
   },
   {
@@ -132,16 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T14:47:32.770534Z",
+     "start_time": "2019-11-14T14:47:32.761370Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['']"
+       "['a', 'a', 'a', 'a']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,16 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T14:47:32.782933Z",
+     "start_time": "2019-11-14T14:47:32.775534Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<re.Match object; span=(0, 0), match=''>"
+       "<_sre.SRE_Match object; span=(0, 1), match='a'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,14 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T14:47:32.794447Z",
+     "start_time": "2019-11-14T14:47:32.786934Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "<_sre.SRE_Match object; span=(0, 1), match='a'>\n"
      ]
     }
    ],
@@ -760,7 +790,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
