--- a/dsc-mod-2-lab-dc-ds-82619-master/index-working.ipynb
+++ b/dsc-mod-2-lab-dc-ds-82619-master/index-working.ipynb
@@ -2138,13 +2138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2019-11-16T21:25:54.310277Z",
+     "start_time": "2019-11-16T21:25:54.303079Z"
+    }
    },
    "outputs": [],
    "source": [
-    "with open(\"/Users/Nathan Venos/Documents/.secret/dark_sky_api\") as api_key_file:\n",
+    "with open(\"/Users/natha/.secret/dark_sky_api.json\") as api_key_file:\n",
     "    my_api_key = str(json.load(api_key_file)['api_key'])\n",
     "# Berlin, Germany\n",
     "berlin_location = '52.5200,13.4050'            "
@@ -3368,21 +3371,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
