--- a/dsc-mod-2-lab-dc-ds-82619-master/index-working.ipynb
+++ b/dsc-mod-2-lab-dc-ds-82619-master/index-working.ipynb
@@ -2149,6 +2149,10 @@
    "source": [
     "with open(\"/Users/natha/.secret/dark_sky_api.json\") as api_key_file:\n",
     "    my_api_key = str(json.load(api_key_file)['api_key'])\n",
+    "\n",
+    "# with open(\"/Users/Nathan Venos/Documents/.secret/dark_sky_api\") as api_key_file:\n",
+    "#     my_api_key = str(json.load(api_key_file)['api_key'])\n",
+    "\n",
     "# Berlin, Germany\n",
     "berlin_location = '52.5200,13.4050'            "
    ]
