--- a/dsc-mod-2-lab-dc-ds-82619-master/dark_sky_api.ipynb
+++ b/dsc-mod-2-lab-dc-ds-82619-master/dark_sky_api.ipynb
@@ -9982,7 +9982,7 @@
     "# csv_folder = 'csv_files/'\n",
     "\n",
     "# defining API url components\n",
-    "api_key = '4bda1b770a27edffbd6af00fd8dac1f6'\n",
+    "api_key = ''\n",
     "url_base = 'https://api.darksky.net/forecast/'\n",
     "location = '38.8483,-77.0342'\n",
     "url = url_base+api_key+'/'+location+'?exclude=minutely,daily,alerts,flags&extend=hourly'\n",
