initializing Comparing ML Techniques Using Pipelines Lab

--- a/module-3/week_1/day2/conditional_probability_Random_variables/conditional_probability.ipynb
+++ b/module-3/week_1/day2/conditional_probability_Random_variables/conditional_probability.ipynb
@@ -147,10 +147,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P(cancer given positive) =  P(cancer given positive) * P(cancer) / P(positive)\n",
-    "                         =           0.99            *    0.01   /     ?\n",
-    "P(positive) = P(positive given cancer) * P(cancer) + P(positive given no cancer) * P(no cancer)\n",
-    "     ?      =         0.99             *    0.01   +           0.01              *      0.99"
+    "P(cancer given positive) =  P(positive given cancer) * P(cancer) / P(positive)  \n",
+    "                         =           0.99            *    0.01   /     ?  \n",
+    "P(positive) = P(positive given cancer) * P(cancer) + P(positive given no cancer) * P(no cancer)  \n",
+    "     ?      =         0.99             *    0.01   +           0.01              *      0.99  "
    ]
   },
   {
