--- a/voltus/Voltus_Project_Nathan.ipynb
+++ b/voltus/Voltus_Project_Nathan.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 321,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T15:03:38.645666Z",
-     "start_time": "2020-02-11T15:03:38.632664Z"
+     "end_time": "2020-02-11T23:28:31.486461Z",
+     "start_time": "2020-02-11T23:28:31.137932Z"
     }
    },
    "outputs": [],
@@ -24,15 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 322,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T14:17:40.323732Z",
-     "start_time": "2020-02-11T14:17:40.318733Z"
+     "end_time": "2020-02-11T23:29:37.230640Z",
+     "start_time": "2020-02-11T23:29:37.223369Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext autoreload\n",
     "pd.options.display.max_rows = 100"
    ]
   },
@@ -700,27 +710,41 @@
     "# all_data_df.reset_index(drop=True, inplace=True)\n",
     "# all_data_df.to_csv('data/kWh_data.csv', index=False)\n",
     "\n",
-    "all_data_df = pd.DataFrame()\n",
-    "for site in site_list:\n",
-    "    site_data_df = pd.read_sql_query(f\"\"\"SELECT (3600./interval_width)*\"kWh\" as \"avg_kW\",\n",
-    "                                                interval_end, interval_width, site_id \\\n",
-    "                                         FROM intervals \\\n",
-    "                                         WHERE site_id='{site}'\n",
-    "                                         ORDER BY interval_end asc;\"\"\"\n",
-    "                                    , conn)\n",
-    "    all_data_df = pd.concat([all_data_df,\n",
-    "                             site_data_df])\n",
-    "all_data_df.reset_index(drop=True, inplace=True)\n",
-    "all_data_df.to_csv('data/kW_data.csv', index=False)"
+    "# all_data_df = pd.DataFrame()\n",
+    "# for site in site_list:\n",
+    "#     site_data_df = pd.read_sql_query(f\"\"\"SELECT (3600./interval_width)*\"kWh\" as \"avg_kW\",\n",
+    "#                                                 interval_end, interval_width, site_id \\\n",
+    "#                                          FROM intervals \\\n",
+    "#                                          WHERE site_id='{site}'\n",
+    "#                                          ORDER BY interval_end asc;\"\"\"\n",
+    "#                                     , conn)\n",
+    "#     all_data_df = pd.concat([all_data_df,\n",
+    "#                              site_data_df])\n",
+    "# all_data_df.reset_index(drop=True, inplace=True)\n",
+    "# all_data_df.to_csv('data/kW_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 323,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T13:57:38.819507Z",
-     "start_time": "2020-02-11T13:57:38.809508Z"
+     "end_time": "2020-02-12T00:07:29.811114Z",
+     "start_time": "2020-02-12T00:06:54.828576Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "all_data_df = pd.read_csv('data/kW_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-12T00:07:29.831639Z",
+     "start_time": "2020-02-12T00:07:29.815117Z"
     }
    },
    "outputs": [
@@ -731,45 +755,19 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 16648411 entries, 0 to 16648410\n",
       "Data columns (total 4 columns):\n",
-      " #   Column          Dtype         \n",
-      "---  ------          -----         \n",
-      " 0   avg_kW          float64       \n",
-      " 1   interval_end    datetime64[ns]\n",
-      " 2   interval_width  int64         \n",
-      " 3   site_id         object        \n",
-      "dtypes: datetime64[ns](1), float64(1), int64(1), object(1)\n",
+      " #   Column          Dtype  \n",
+      "---  ------          -----  \n",
+      " 0   avg_kW          float64\n",
+      " 1   interval_end    object \n",
+      " 2   interval_width  int64  \n",
+      " 3   site_id         object \n",
+      "dtypes: float64(1), int64(1), object(2)\n",
       "memory usage: 508.1+ MB\n"
      ]
     }
    ],
    "source": [
     "all_data_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 304,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-11T19:04:01.388876Z",
-     "start_time": "2020-02-11T19:03:57.932843Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "avg_kW 23\n",
-      "interval_end 0\n",
-      "interval_width 0\n",
-      "site_id 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for col in all_data_df.columns:\n",
-    "    print(col, all_data_df[col].isna().sum())"
    ]
   },
   {
@@ -919,7 +917,8 @@
     "    Given a time series with a mult-index where the first index is an entire day,\n",
     "    the function compares each day's near_peak_load against an aggregated weekly\n",
     "    \"\"\"\n",
-    "    for day in iter_index:"
+    "    for day in iter_index:\n",
+    "        "
    ]
   },
   {
