--- a/voltus/load_analysis_challenge-nathan_venos/Voltus_Project_Nathan.ipynb
+++ b/voltus/load_analysis_challenge-nathan_venos/Voltus_Project_Nathan.ipynb
@@ -49,9 +49,9 @@
     "conn = psycopg2.connect(\n",
     "    database=\"interval_load_data\",\n",
     "    user='postgres',\n",
-    "    password='Onei9yepahShac0renga',\n",
-    "    host=\"test-interval-load-data.cwr8xr5dhgm1.us-west-2.rds.amazonaws.com\",\n",
-    "    port=\"5432\"\n",
+    "    password='XXX',\n",
+    "    host=\"XXX\",\n",
+    "    port=\"XXX\"\n",
     ")"
    ]
   },
@@ -1105,7 +1105,7 @@
     "  \n",
     "Site ID **e7ef7c8f-7d80-c0ca-03fe-9c0f220c3d7f**: Properly identified as continuous with not daily start or stop.\n",
     "  \n",
-    "Site ID **6ba0dc29-c307-1388-1637-85349f4e0309**: Characterized as continuous, which it appears to be on the weekends, but the weekdays show a clear rhythm, so it falls somewhat in the middle, though I would have preferred my code identify it as daily. The lack of dramatic peaks and troughs during the week and the much high and very similar peaks and troughs in the weekends fooled my attempt to utilize a T-test.\n",
+    "Site ID **6ba0dc29-c307-1388-1637-85349f4e0309**: Characterized as continuous, which it appears to be on the weekends, but the weekdays show a clear rhythm, so it falls somewhat in the middle, though I would have preferred my code identify it as daily. The lack of dramatic peaks and troughs during the week along with the much higher, and very similar, peaks and troughs in the weekends fooled my attempt to utilize a T-test.\n",
     "  \n",
     "Site ID **fbba4fe0-ad9b-ec46-575c-c22ff0a20186**: Incorrectly identified what appears to be a continuous process because of the short-lived, but not entirely uncommon down spikes that made my code think the site had a dramatically lower base load on some days.\n",
     "  \n",
